--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "metalsmith-reading-time": "0.0.1",
     "metalsmith-redirect": "^3.0.3",
     "metalsmith-serve": "0.0.7",
-    "metalsmith-watch": "^1.0.3"
+    "metalsmith-watch": "^1.0.3",
+    "slug": "^2.1.1"
   },
   "main": "build.js",
   "scripts": {
