--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "metalsmith-debug": "^1.2.0",
     "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-drafts": "^1.0.0",
+    "metalsmith-excerpts": "^1.3.0",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-markdown": "^1.3.0",
     "metalsmith-metallic": "^2.0.3",
