--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "metalsmith-discover-partials": "^0.1.2",
     "metalsmith-drafts": "^1.0.0",
     "metalsmith-excerpts": "^1.3.0",
+    "metalsmith-feed": "^1.0.0",
     "metalsmith-layouts": "^2.3.1",
+    "metalsmith-mapsite": "^1.0.6",
     "metalsmith-markdown": "^1.3.0",
     "metalsmith-metallic": "^2.0.3",
     "metalsmith-permalinks": "^2.2.0",
