--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "description": "A blog to explore what's in his head",
   "author": "Carlton Segbefia",
   "dependencies": {
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-sass": "^4.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp4-run-sequence": "^1.0.1",
     "handlebars": "^4.7.6",
     "helper-moment": "^0.2.0",
     "jstransformer-handlebars": "^1.1.0",
@@ -26,6 +34,19 @@
     "metalsmith-watch": "^1.0.3",
     "slug": "^2.1.1"
   },
+  "browserslist": [
+    "> 1%",
+    "ie >= 8",
+    "edge >= 15",
+    "ie_mob >= 10",
+    "ff >= 45",
+    "chrome >= 45",
+    "safari >= 7",
+    "opera >= 23",
+    "ios >= 7",
+    "android >= 4",
+    "bb >= 10"
+  ],
   "main": "build.js",
   "scripts": {
     "prestart": "npm install",
