--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "metalsmith-mapsite": "^1.0.6",
     "metalsmith-markdown": "^1.3.0",
     "metalsmith-metallic": "^2.0.3",
+    "metalsmith-pagination": "^1.5.0",
     "metalsmith-permalinks": "^2.2.0",
     "metalsmith-reading-time": "0.0.1",
     "metalsmith-redirect": "^3.0.3",
